--- a/env.html
+++ b/env.html
@@ -23,13 +23,17 @@
         </p>
         <br/>
 
+        <br/><p class="text">_G - link to the global computer environment(not the global environment of the mod, which is available via global in unsafe mode, but the global environment of the script)</p>
+        <br/><p class="text">_ENV - the same as _G</p>
+        <br/><p class="text">sm - link to scrap mechanic api: <a href="safeSmEnv.html" class="hyper">safe mode</a> | <a href="https://scrapmechanic.com/api/index.html" class="hyper">unsafe mode</a></p>
+        <br/><p class="text">global - link to global namespace (unsafe mode only)</p>
+        <br/><p class="text">self - link to ScriptableComputer script (unsafe mode only)</p>
+
+        <br/>
         <br/>
         <p class="text">
             _VERSION:string - contains the name of the lua virtual machine that the mod uses
         </p>
-
-        <br/><p class="text">_G - link to the global computer environment(not the global environment of the mod, which is available via global in unsafe mode, but the global environment of the script)</p>
-        <br/><p class="text">_ENV - the same as _G</p>
 
         <br/>
         <p class="text">
@@ -144,8 +148,7 @@ function callback_loop() end</code>
         <p class="text">
             warning(msg) - outputs a warning to the debugging console in the computer GUI (it always works, does not require to be enabled in the mod settings)
         </p>
-        
-        <br/><p class="text">global - link to global namespace(unsafe mode only)</p>
+
         <br/><p class="text">tostring(v) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">tonumber(str) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">clearregs() - clear all registers</p>
@@ -159,14 +162,16 @@ function callback_loop() end</code>
         <br/><p class="text">next(table, index) -> (index, value) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">pcall(f, ...) -> (num, ...) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">xpcall(f, err) -> (num, result) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
-        <br/><p class="text">self - link to ScriptableComputer script (unsafe mode only)</p>
         <br/><p class="text">select(index, ...) -> ... - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">getParentComputers() -> table - returns table of parent computers datas</p>
         <br/><p class="text">getChildComputers() -> table - returns table of child computers datas</p>
         <br/><p class="text">getCurrentComputer() -> table - returns table of self computer data</p>
         <br/><a name="getComponent"></a><p class="text">getComponent(name) -> table - returns the api table of the first connected <a href="components.html" class="hyper">component</a> of the specified type. creates an exception if a component of this type is not connected</p>
         <br/><a name="getComponents"></a><p class="text">getComponents(name) -> table - returns a table with api tables of all connected <a href="components.html" class="hyper">components</a> of the specified type</p>
-        <br/><p class="text">getDisplays() -> table - returns table of child displays datas</p>
+        <br/><a name="getMotorByLabel"></a><p class="text">getMotorByLabel(label:string) -> table - returns motor by label, if there is no motor with such label, it will return an exception</p>
+        <br/><a name="getMotorsByLabel"></a><p class="text">getMotorsByLabel(label:string) -> table - returns a table of motors with the specified label</p>
+        <br/><a name="getComponentByLabel"></a><p class="text">getComponentByLabel(componentType:string, label:string) -> table - returns component by label, if there is no component with such label, it will return an exception</p>
+        <br/><a name="getComponentsByLabel"></a><p class="text">getComponentsByLabel(componentType:string, label:string) -> table - returns a table of components with the specified label</p>
         <br/><p class="text">clientInvoke(code: str, args...) - performs invokation some code on clients(unsafe mode only)</p>
         <br/><p class="text">clientInvokeTo(player_nickname/playerobj, code: str, args...) - performs invokation some code on client(unsafe mode only)</p>
         <br/><p class="text">input(color: [str | nil]) -> bool - input selector (if color specified); returns true if one on selected inputs is true else returns false</p>
@@ -183,6 +188,7 @@ function callback_loop() end</code>
         <br/><p class="text">getSkippedTicks():number - returns the number of ticks that your computer has missed since the previous receipt of control. normally, this method should always return 0, if these values sometimes become greater than 0, you should optimize your code</p>
         <br/><p class="text">getLagScore():number - the lag counter. if your computer creates lags, then this value will increase. if this value reaches 10, then your computer will start skipping clock cycles in order to avoid game lags. if this value reaches 100, your computer will crash. if your computer has stopped creating lags, then this value will be deducted at 1 per tick</p>
         <br/><p class="text">getUptime():number - returns the computer's running time in game ticks(40 ticks - one second). if the computer skips ticks to using too much processor time, this function will still show the real time of operation. this means that the value can change by more than 1 (if your computer missed a tick)</p>
+        <br/><a name="getTick"></a><p class="text">getTick():number - it works almost the same as getUptime, but it cannot increase by more than 1 in one iteration, even if the computer skips several tick, this variable will never jump by more than one value. thus, if you make a "getUptime() - getTick()", you will get the number of missed tick for the entire time of operation</p>
         <br/><p class="text">getDeviceType():string - returns the type of your computer. it can be "computer" or "tablet" (tablets are not available at the moment)</p>
 
         <br/>
@@ -313,8 +319,19 @@ function callback_loop()
 end</code>
         </pre>
 
-        <br/><p class="text">setCode(code:string) - overwrites the computer code but does not restart it. the changes will take effect after the reboot(you can trigger a software reboot) can be used, for example, to update the code through the antenna</p>
-        <br/><p class="text">getCode():string - returns the current computer code</p>
+        <br/><p class="text">setCode(code:string) - overwrites the computer code but does not restart it.<br/>
+        the changes will take effect after the reboot(you can trigger a software reboot) can be used, for example, to update the code through the antenna. <br/>
+        please note that if you had code encryption enabled, then after using this method, the code will no longer be encrypted. If you need to update the code so that it remains encrypted, you need to call encryptCode() immediately after this method.</p>
+        <br/><p class="text">getCode():string - returns the current computer code<br/>
+        please note that if the code is encrypted, this method will return a comment for the user, which indicates that the code is encrypted, it will not return the real code or its encrypted form<br/>
+        to avoid UB, before using this method, it is better to insert a check that the code is encrypted using isCodeEncrypted()</p>
+
+        <br/><p class="text">encryptCode(string|nil):boolean - encrypts the code if it is not encrypted and does nothing if the code is already encrypted.<br/>
+        this action cannot be undone except by overwriting the encrypted code to a new version of the code use setCode()<br/>
+        this method does not restart the computer.<br/>
+        you can pass a string here as a message for the user who opens the computer with the encrypted code. these message cannot be changed after the code is already encrypted, even if you call this method again.<br/>
+        returns true if the code was encrypted, returns false if it was already encrypted at the time of the call or it could not be encrypted for some reason.</p>
+        <br/><p class="text">isCodeEncrypted():boolean - returns true if the code was encrypted.</p>
 
         <br/><p class="text">setData(string) - sets the data string of the computer, it is written to the computer block and can be read using getData. the maximum size of this string is 4 kilobytes</p>
         <br/><p class="text">getData():string - returns the current string of computer data</p>
