--- a/gps.html
+++ b/gps.html
@@ -24,22 +24,29 @@
             component name - gps
         </p>
 
+        <br/>
         <p class="text">methods:</p>
         <ul class="list">
             <li><span>gps.getSelfGpsData():gpsdata - returns the GPS-DATA of the GPS block itself</span></li>
             <li><span>gps.getTagsGpsData(label:string):{gpsdata, ...} - returns GPS-DATA for all GPS tags on the map with this label. please note that when you put a new GPS tag, its label is random. this is done so that you cannot be detected quickly</span></li>
         </ul>
 
+        <br/>
         <p class="text">GPS-DATA (table):</p>
         <ul class="list">
             <li><span>gpsdata.position:vec3 - world position</span></li>
             <li><span>gpsdata.rotation:quat - world rotation</span></li>
             <li><span>gpsdata.rotationEuler:vec3 - world rotation (in the corners of Euler)</span></li>
+            <li><span>gpsdata.velocity:vec3 - returns the linear velocity of a shape</span></li>
+            <li><span>gpsdata.speed:number - shape speed. in fact, this is the length of the velocity vector</span></li>
+            <li><span>gpsdata.angularVelocity:vec3 - returns the angular velocity of a body</span></li>
             <li><span>gpsdata.distance:number - the distance to the GPS tag (always equal to 0 for the GPS unit itself)</span></li>
+            <br/>
             <li><span>also, some fields of the shape are available for reading:</span></li>
-            gpsdata.worldPosition<br/>
-            gpsdata.worldRotation<br/>
-            gpsdata.velocity<br/>
+            gpsdata.worldPosition - gpsdata.position alias<br/>
+            gpsdata.worldRotation - gpsdata.rotation alias<br/>
+            gpsdata.localPosition<br/>
+            gpsdata.localRotation<br/>
             gpsdata.xAxis<br/>
             gpsdata.yAxis<br/>
             gpsdata.zAxis<br/>
@@ -60,12 +67,15 @@ function callback_loop()
     logPrint("rotation-self", utils.roundTo(gpsdata.rotation.x, 1), utils.roundTo(gpsdata.rotation.y, 1), utils.roundTo(gpsdata.rotation.z, 1), utils.roundTo(gpsdata.rotation.w, 1))
     logPrint("rotation-euler-self", utils.roundTo(gpsdata.rotationEuler.x, 1), utils.roundTo(gpsdata.rotationEuler.y, 1), utils.roundTo(gpsdata.rotationEuler.z, 1))
     logPrint("velocity-self", utils.roundTo(gpsdata.velocity.x, 1), utils.roundTo(gpsdata.velocity.y, 1), utils.roundTo(gpsdata.velocity.z, 1))
-    for i, v in ipairs(gps.getTagsGpsData(0)) do
+    logPrint("speed-self", utils.roundTo(gpsdata.speed, 1))
+    logPrint("---------------")
+    for i, v in ipairs(gps.getTagsGpsData("tag_xxxxxx")) do
         logPrint("position-tag:" .. tostring(i), utils.roundTo(v.position.x, 1), utils.roundTo(v.position.y, 1), utils.roundTo(v.position.z, 1))
         logPrint("distance-tag:" .. tostring(i), utils.roundTo(v.distance, 1))
         logPrint("rotation-tag:" .. tostring(i), utils.roundTo(v.rotation.x, 1), utils.roundTo(v.rotation.y, 1), utils.roundTo(v.rotation.z, 1), utils.roundTo(v.rotation.w, 1))
         logPrint("rotation-euler-tag:" .. tostring(i), utils.roundTo(v.rotationEuler.x, 1), utils.roundTo(v.rotationEuler.y, 1), utils.roundTo(v.rotationEuler.z, 1))
         logPrint("velocity-tag:" .. tostring(i), utils.roundTo(v.velocity.x, 1), utils.roundTo(v.velocity.y, 1), utils.roundTo(v.velocity.z, 1))
+        logPrint("speed-tag", utils.roundTo(v.speed, 1))
     end
 end</code>
         </pre>
