--- a/gui.html
+++ b/gui.html
@@ -78,6 +78,7 @@
         <p class="text">window object methods:</p>
         <ul class="list">
             <li><span>guiwindow:setDraggable(boolean) - set to true if you want your window to be able to be moved</span></li>
+            <li><span>guiwindow:setAutoViewport(boolean) - if you call this with the true argument, then all elements inside the window cannot be rendered outside the window</span></li>
             <li><span>guiwindow:setColor(color|function(guiwindow)) - sets the background color of the window. it can be a drawer function</span></li>
             <li><span>guiwindow:upPanel(color, textcolor, title:string, collapsibility:boolean) - configures the top panel of the window</span></li>
             <li><span>guiwindow:panelButton(sizeX:number, toggle:boolean, title, bg, fg, bg_press, fg_press) - adds a button to the top window panel</span></li>
