--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div style="display: inline;">
             <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596">
-                <img src="preview.jpg" class="image" />
+                <img src="preview.png" class="image" />
             </a>
             <button onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596', '_blank').focus();">download mod from steam</button>
         </div>
