--- a/motor.html
+++ b/motor.html
@@ -23,6 +23,7 @@
             the stepper motor can operate in two modes, movement and angle setting<br/>
             no batteries are needed to operate a creative stepper motor,<br/>
             batteries are needed to operate a regular one if the "resource consumption" option is enabled in the Permission Tool<br/>
+            you can set a label to the motor so that you can get it later using <a href="env.html#getMotorByLabel" class="hyper">"getMotorByLabel"</a> or <a href="env.html#getMotorsByLabel" class="hyper">"getMotorsByLabel"</a><br/>
             component name - motor
         </p>
 
