--- a/components.html
+++ b/components.html
@@ -36,6 +36,7 @@
             <a class="hyper" href="./holoprojector.html"><li><span>holoprojector</span></li></a>
             <a class="hyper" href="./synthesizer.html"><li><span>synthesizer</span></li></a>
             <a class="hyper" href="./radarDetector.html"><li><span>radarDetector</span></li></a>
+            <a class="hyper" href="./pistonController.html"><li><span>pistonController</span></li></a>
         </ul>
     </body>
 </html>
