--- a/led.html
+++ b/led.html
@@ -30,7 +30,7 @@
         <ul class="list">
             <li><span>led.setColor(index, color) - sets the color of the LED</span></li>
             <li><span>led.setGlow(index, multiplier) - sets the LED brightness multiplier from 0 to 1 (usually visible only at night)</span></li>
-            <li><span>led.getStripLenght():number - returns the number of LEDs in the chain</span></li>
+            <li><span>led.getStripLength():number - returns the number of LEDs in the chain</span></li>
         </ul>
 
         
@@ -39,7 +39,7 @@
 
 local colors = require("colors")
 local leds = getComponent("led")
-local count = leds.getStripLenght()
+local count = leds.getStripLength()
 
 function callback_loop()
     local offset = getUptime() / 8
